2005-10-12  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/gplot.l: Major cleanup.
	Built-in variable gnuplot_has_frames no longer necessary.
	(gnuplot): New class to manage multiple gnuplot processes.
	(handle_string): Delete.  It was only used for the case of
	__gnuplot_plot__ "file", which is no longer allowed.

2005-10-05  John W. Eaton  <jwe@octave.org>

	* variables.cc (symbol_exist): Chekck for autoloaded functions.

	* parse.y (Fautoload): New function.
	(autoloading, autoload_map): New static variables.
	(load_fcn_from_file, frob_function): Handle autoloading.
	(lookup_autoload): New function.
	(get_help_from_file): New args, symbol_found and include_file_info.
	Change all callers.

2005-10-05  David Bateman  <dbateman@free.fr>

	* help.cc (try_info): format in command string for mingw.

2005-09-30  John W. Eaton  <jwe@octave.org>

	* ov.cc (octave_value::~octave_value): No need to set rep to zero
	after deleting.

2005-09-29  John W. Eaton  <jwe@octave.org>

	* syscalls.cc (mk_stat_map): Store mode too.
	(FS_ISREG, FS_ISDIR, FS_ISCHR, FS_ISBLK, FS_ISFIFO, FS_ISLNK,
	FS_ISSOCK): New functions.
	(Fstat): Fix docstring.

2005-09-28  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (printf_value_cache::double_value): Force
	character strings to be converted to ASCII equivalents.

	* data.cc (Fcomplex): New function.

	* ov-type-conv.h (OCTAVE_TYPE_CONV_BODY3): Return arg unchanged if
	class name is same as name of conversion.

	* dirfns.cc (Frmdir, Fmkdir): For compatibility, return true for
	success and false for failure.  Return third value, msgid.
	(Frmdir): Handle second arg for recursive behavior.

2005-09-23  John W. Eaton  <jwe@octave.org>

	* parse.y (load_fcn_from_file): Don't look in path if file is
	absolute and has .oct or .m extension.

	* utils.cc (Ferrno_list): New function.

	* oct-errno.h, oct-errno.cc.in: New files.
	* Makefile.in: Add them to the appropriate lists.
	(oct-errno.cc): New rule.